--- a/academy/website/index.html
+++ b/academy/website/index.html
@@ -28,14 +28,14 @@
 			  src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBtJC13oxfEZOr92cboRj5AGAgYAqcNba8
 			    &q=London+W11 2AJ&zoom=15" allowfullscreen>
 			</iframe>
-			<div class="inner">
+			<section>
 				<header>
 					<h2>Schedule</h2>
 				</header>
 				<p>Every Wednesday from 19:15 - 22:00.</p>
 				<p>The Walmer Castle <br /> 58 Ledbury Road <br /> W11 2AJ	</p>
 				<p>There is a bridge fee of £10 per person.</p>
-			</div>
+			</section>
 		</article>
 
 		<article class="container green">
@@ -50,10 +50,8 @@
 			</section>
 		</article>
 
-		<article class="container left">
+		<article class="container">
 
-			<div class="side">
-			</div>
 			<section>
 				<header>
 					<h3>Hand of the Week</h3>
@@ -77,7 +75,7 @@
 
 				  <div class="hand east">
 				    <div class="seatname">East</div>
-				    <div class="spade holding"  >&mdash;</div>
+				    <div class="spade holding"  >&mdash;  2 3 4 2  2 2 2</div>
 				    <div class="heart holding"  >&mdash;</div>
 				    <div class="diamond holding">&mdash;</div>
 				    <div class="club holding"   >&mdash;</div>
