get rid of right gap

--- a/academy/website/index.html
+++ b/academy/website/index.html
@@ -3,13 +3,13 @@
 	<head>
 		<title>Walmer Castle Bridge Group</title>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="assets/css/bridge.css" />
 	</head>
 	<body>
 		<article class="container left">
-			<div class="side"><img src="images/cards.jpg" /></div>
+			<div class="side"><img src="images/cards.jpg" class="side2" /></div>
 			<section>
 				<header>
 					<h2>Walmer Castle Bridge Group</h2>
@@ -71,22 +71,6 @@
 				    <div class="heart holding"  >K J 8</div>
 				    <div class="diamond holding">A Q T 6 5</div>
 				    <div class="club holding"   >Q T 6 4</div>
-				  </div>
-
-				  <div class="hand east">
-				    <div class="seatname">East</div>
-				    <div class="spade holding"  >&mdash;  2 3 4 2  2 2 2</div>
-				    <div class="heart holding"  >&mdash;</div>
-				    <div class="diamond holding">&mdash;</div>
-				    <div class="club holding"   >&mdash;</div>
-				  </div>
-
-				  <div class="hand west">
-				    <div class="seatname">West</div>
-				    <div class="spade holding"  >&mdash;</div>
-				    <div class="heart holding"  >&mdash;</div>
-				    <div class="diamond holding">&mdash;</div>
-				    <div class="club holding"   >&mdash;</div>
 				  </div>
 
 				  <div class="hand south">
