--- a/academy/website/index.html
+++ b/academy/website/index.html
@@ -6,6 +6,7 @@
 		<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="assets/css/bridge.css" />
+		<link rel="shortcut icon" href="about:blank">
 	</head>
 	<body>
 		<article class="container left">
