small copy changes

--- a/academy/website/index.html
+++ b/academy/website/index.html
@@ -17,7 +17,7 @@
 				</header>
 				<p>We are a friendly bridge group based in Notting Hill which runs a weekly supervised duplicate.</p>
 				<p>It is perfect for players who know the rules of the game and want to play in a social and relaxed environment. Individuals will also be guarenteed a game so you do not need to come with a partner.</p>
-				<p>The <a href="http://www.bridgewebs.com/cgi-bin/bwoi/bw.cgi?club=ruffclub&pid=display_future">Calander</a> and <a href="http://www.bridgewebs.com/cgi-bin/bwoi/bw.cgi?club=ruffclub&pid=display_past">Results</a> can be found on the Ruff Club website. You can contact Mark on: <a href="mailto:mark.dessain@gmail.com">mark.dessain@gmail.com</a> or <a href="tel:447960841271">+44 07960 841271</a>.</p>
+				<p>The <a href="http://www.bridgewebs.com/cgi-bin/bwoi/bw.cgi?club=ruffclub&pid=display_future">Calander</a> and <a href="http://www.bridgewebs.com/cgi-bin/bwoi/bw.cgi?club=ruffclub&pid=display_past">Results</a> can be found on the Ruff Club website. You can contact Mark on <a href="mailto:mark.dessain@gmail.com">mark.dessain@gmail.com</a> or <a href="tel:447960841271">+44 07960 841271</a>.</p>
 
 			</section>
 		</article>
@@ -45,8 +45,8 @@
 					<h3>About</h3>
 				</header>
 
-				<p>We play in a pub called The Walmer Castle which is in Notting Hill. We play about 15-18 boards at a fairly relaxed pace. Former England Junior squad member <a href="https://www.facebook.com/markdessain">Mark Dessain</a> is the host and is available as a fount of wisdom that can be tapped for impartial advice. Food is available at the pub so you can have supper during the evening as well.</p>
-				<p>Single players are always welcome and we especially like to include players who may not have played much (or any!) duplicate before. All necessary support will be available.  Bridge fee is £10.  No need to pre-book - everyone is guaranteed a game.
+				<p>We play in a pub called The Walmer Castle which is in Notting Hill and get through about 15-18 boards at a fairly relaxed pace. Former England Junior squad member <a href="https://www.facebook.com/markdessain">Mark Dessain</a> is the host and is available for suggestions or impartial advice if you get stuck. Food is available at the pub so you can have supper during the evening as well.</p>
+				<p>Single players are always welcome and we especially like to include players who may not have played much (or any!) duplicate before. All necessary support will be available. There is no need to pre-book - everyone is guaranteed a game.
 				<p>The group has a long standing affiliation with other London bridge groups such as <a href="http://www.aceshibridge.co.uk/">Aces Hi!</a>, <a href="https://www.meetup.com/Friendly-bridge-group-in-London/">Friendly Bridge Meetup</a> and <a href="https://www.brianbridge.net">Brian Bridge</a>.
 			</section>
 		</article>
