Fixing calendar typo

--- a/website/index.html
+++ b/website/index.html
@@ -17,7 +17,7 @@
 				</header>
 				<p>We are a friendly bridge group based in Notting Hill which runs a weekly supervised duplicate.</p>
 				<p>It is perfect for players who know the rules of the game and want to play in a social and relaxed environment. Individuals will also be guarenteed a game so you do not need to come with a partner.</p>
-				<p>The <a href="http://www.bridgewebs.com/cgi-bin/bwoi/bw.cgi?club=ruffclub&pid=display_future">Calander</a> and <a href="http://www.bridgewebs.com/cgi-bin/bwoi/bw.cgi?club=ruffclub&pid=display_past">Results</a> can be found on the Ruff Club website. You can contact Mark on <a href="mailto:mark.dessain@gmail.com">mark.dessain@gmail.com</a> or <a href="tel:447960841271">+44 07960 841271</a>.</p>
+				<p>The <a href="http://www.bridgewebs.com/cgi-bin/bwoi/bw.cgi?club=ruffclub&pid=display_future">Calendar</a> and <a href="http://www.bridgewebs.com/cgi-bin/bwoi/bw.cgi?club=ruffclub&pid=display_past">Results</a> can be found on the Ruff Club website. You can contact Mark on <a href="mailto:mark.dessain@gmail.com">mark.dessain@gmail.com</a> or <a href="tel:447960841271">+44 07960 841271</a>.</p>
 
 			</section>
 		</article>
