--- a/website/index.html
+++ b/website/index.html
@@ -15,10 +15,9 @@
 				<header>
 					<h2>Walmer Castle Bridge Group</h2>
 				</header>
-				<p>We are a friendly bridge group based in Notting Hill which runs a weekly supervised duplicate.</p>
+				<p>We are a friendly mixed ability bridge group based in Notting Hill. We hold a weekly supervised duplicate every Wednesday.</p>
 				<p>It is perfect for players who know the rules of the game and want to play in a social and relaxed environment. Individuals will also be guarenteed a game so you do not need to come with a partner.</p>
 				<p>The <a href="http://www.bridgewebs.com/cgi-bin/bwoi/bw.cgi?club=ruffclub&pid=display_future">Calendar</a> and <a href="http://www.bridgewebs.com/cgi-bin/bwoi/bw.cgi?club=ruffclub&pid=display_past">Results</a> can be found on the Ruff Club website. You can contact Mark on <a href="mailto:mark.dessain@gmail.com">mark.dessain@gmail.com</a> or <a href="tel:447960841271">+44 07960 841271</a>.</p>
-
 			</section>
 		</article>
 
@@ -27,7 +26,7 @@
 			  class="side"
 			  frameborder="0" style="border:0"
 			  src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBtJC13oxfEZOr92cboRj5AGAgYAqcNba8
-			    &q=London+W11 2AJ&zoom=15" allowfullscreen>
+			    &q=London+W11 2AJ&zoom=14" allowfullscreen>
 			</iframe>
 			<section>
 				<header>
@@ -36,6 +35,7 @@
 				<p>Every Wednesday from 19:15 - 22:00.</p>
 				<p>The Walmer Castle <br /> 58 Ledbury Road <br /> W11 2AJ	</p>
 				<p>There is a bridge fee of £10 per person.</p>
+				<p>Parking is free from 18:30 onwards and the cloest stations are Notting Hill Gate and Westbourne Park</p>
 			</section>
 		</article>
 
@@ -47,7 +47,8 @@
 
 				<p>We play in a pub called The Walmer Castle which is in Notting Hill and get through about 15-18 boards at a fairly relaxed pace. Former England Junior squad member <a href="https://www.facebook.com/markdessain">Mark Dessain</a> is the host and is available for suggestions or impartial advice if you get stuck. Food is available at the pub so you can have supper during the evening as well.</p>
 				<p>Single players are always welcome and we especially like to include players who may not have played much (or any!) duplicate before. All necessary support will be available. There is no need to pre-book - everyone is guaranteed a game.
-				<p>The group has a long standing affiliation with other London bridge groups such as <a href="http://www.aceshibridge.co.uk/">Aces Hi!</a>, <a href="https://www.meetup.com/Friendly-bridge-group-in-London/">Friendly Bridge Meetup</a> and <a href="https://www.brianbridge.net">Brian Bridge</a>.
+				<p>The scores will be recorded using <a href="">BriAn Bridge</a> and it would be really useful if players who have mobile phones could download the app - <a href="https://itunes.apple.com/gb/app/free-brian-bridge-client/id576769349?mt=8">ios</a> / <a href="https://play.google.com/store/apps/details?id=freebrian.com">android</a>.</p>
+				<p>The group has a long standing affiliation with other London bridge groups such as <a href="http://www.aceshibridge.co.uk/">Aces Hi!</a> and the <a href="https://www.meetup.com/Friendly-bridge-group-in-London/">Friendly Bridge Meetup</a>.
 			</section>
 		</article>
 
