updating colour and adding contact details

--- a/website/index.html
+++ b/website/index.html
@@ -53,7 +53,6 @@
 		</article>
 
 		<article class="container">
-
 			<section>
 				<header>
 					<h3>Hand of the Week</h3>
@@ -85,8 +84,16 @@
 				</div>
 
 			</section>
-
 		</article>
 
+		<article class="container dark">
+			<div class="side"><img src="images/cards.jpg" class="side2" /></div>
+			<section>
+				<header>
+					<h2>Contact Details</h2>
+				</header>
+				<p><a href="mailto:mark.dessain@gmail.com">mark.dessain@gmail.com</a> or <a href="tel:447960841271">+44 07960 841271</a>.</p>
+			</section>
+		</article>
 	</body>
 </html>
