--- a/website/index.html
+++ b/website/index.html
@@ -35,7 +35,7 @@
 				<p>Every Wednesday from 19:15 - 22:00.</p>
 				<p>The Walmer Castle <br /> 58 Ledbury Road <br /> W11 2AJ	</p>
 				<p>There is a bridge fee of £10 per person.</p>
-				<p>Parking is free from 18:30 onwards and the cloest stations are Notting Hill Gate and Westbourne Park</p>
+				<p>Parking is free from 18:30 onwards and the closest tube stations are Notting Hill Gate and Westbourne Park</p>
 			</section>
 		</article>
 
