--- a/website/index.html
+++ b/website/index.html
@@ -96,4 +96,15 @@
 			</section>
 		</article>
 	</body>
+
+	<!-- Global Site Tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-106610901-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments)};
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-106610901-1');
+	</script>
+
 </html>
